# admission-case-crawler

./: .gitignore  .gitmodules  README.md  THIRD_PARTY.md  install_skill.ps1  pyproject.toml  requirements.txt  run.ps1  setup.ps1
skills/admission-case-collector/: SKILL.md
skills/admission-case-collector/agents/: openai.yaml
src/admission_case_crawler/: __init__.py  cli.py  config.py  default_config.py  exporter.py  media.py  ocr.py  wechat.py
tests/: test_exporter.py
