[project]
name = "admission-case-crawler"
version = "0.1.0"
description = "Crawl and merge admission cases from Weibo, Xiaohongshu and WeChat official account articles."
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1.5",
  "pandas>=2.2.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.0",
]

[project.scripts]
admission-case-crawler = "admission_case_crawler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
norecursedirs = ["third_party", ".venv", ".cache"]
